tests/models/struct/unnamed/struct/fail/lt.rs
use dade::model;
#[model]
struct InnerModel;
#[model]
struct TestModel (
   #[field(lt = 2)]
    InnerModel
);
fn main() {}
